<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- String used for Activity label    -->
    <string name="app_name">Digital Doctor</string>
    <string name="clinic_finder">Clinic Finder</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- String used for Login    -->
    <string name="digital_doctor">Digital Doctor</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>

    <!-- String used for Register    -->
    <string name="upload">Upload</string>
    <string name="user_name">User Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="select_a_date">Select a Date</string>
    <string name="already_have_an_account">Already have an account?</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_chat_dashboard">MainActivity</string>
    <string name="title_message">Message</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_account">Account</string>
    <string name="title_chats">Chats</string>
    <string name="title_doctor_list">Doctors</string>
    <string name="title_add_doctors">Add a Doctor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">testActivity</string>
    <string name="logout">Logout</string>
    <string name="about_us">About Us</string>
    <string name="profile">Profile</string>

    <!-- String used for case tracker -->
    <string name="rubicBold" tools:ignore="ReferenceType">@font/rubikbold</string>
    <string name="rubicRegular" tools:ignore="ReferenceType">@font/rubikregular</string>
    <string name="rubicLight" tools:ignore="ReferenceType">@font/rubiklight</string>
    <string name="team_member">Team Member</string>
    <string name="team_member_name1">Rui Chen, Shiyi Xu, Ruowen Yao,</string>
    <string name="team_member_name2">Hangyu Liu, Yicheng Zhang, Nan Bai</string>
    <string name="content">Digital Doctor is a communication app that provides a platform for
        patients and doctors to discuss the patient\'s conditions. Besides the Chat function,
        it also integrated a function to monitor heart rate via a mobile device,
        which may assist doctors to understand patient’s health condition. Clinic Finder and
        Covid-19 Tracker are also cooperated to the current demands. The Clinic Finder helps
        the patient to find the local medical centres and hospitals through Google Map. Covid-19
        Tracker shows Covid-19 data from the selected country, updating everyday. </string>
    <string name="thanks">Some Icons of this app are from www.flaticon.com</string>
</resources>