<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/blue_700" />
        <TextView
            android:id="@+id/tv_1"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="35dp"
            android:background="@color/blue_700"
            android:text="@string/digital_doctor"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="32dp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/rl_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_1"
            android:orientation="vertical"
            android:paddingHorizontal="15dp">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie_login"
                app:lottie_repeatMode="restart"
                app:lottie_repeatCount="100"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                app:lottie_autoPlay="true"
                app:lottie_rawRes="@raw/login" />

            <EditText
                android:id="@+id/account_edit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/lottie_login"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="10dp"
                android:drawableLeft="@drawable/icon_user"
                android:drawablePadding="5dp"
                android:hint="@string/email_address"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:paddingRight="40dp"
                android:singleLine="true"
                android:textColor="#2c2c2c"
                android:textSize="18dp" />

            <ImageView
                android:id="@+id/account_edit_del"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_below="@id/lottie_login"
                android:layout_alignParentRight="true"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/icon_del"
                android:visibility="invisible"/>

            <EditText
                android:id="@+id/psd_edit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/account_edit"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:drawableLeft="@drawable/icon_password"
                android:drawablePadding="5dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:paddingRight="40dp"
                android:singleLine="true"
                android:textColor="#2c2c2c"
                android:textSize="18dp" />

            <ImageView
                android:id="@+id/psd_edit_del"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_below="@+id/account_edit"
                android:layout_alignParentRight="true"
                android:layout_marginTop="35dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/icon_del"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/psd_edit"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_selector"
                android:text="@string/login"
                android:textAlignment="center"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_login"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_selector"
                android:text="@string/register"
                android:textAlignment="center"
                android:textSize="18dp" />
        </RelativeLayout>

        </RelativeLayout>
</ScrollView>