<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/blue_700" />

        <TextView
            android:id="@+id/tv_1"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="35dp"
            android:background="@color/blue_700"
            android:text="Profile"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="32dp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_1"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp" >

            <LinearLayout
                android:id="@+id/profile_pic_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:background="@drawable/bg_click">

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    app:cardCornerRadius="50dp"
                    app:cardElevation="10dp">

                    <ImageView
                        android:id="@+id/profile_pic"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_account" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="Change Picture"
                    android:gravity="center"
                    android:textSize="16dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_name_ll"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:orientation="horizontal"
                android:background="@drawable/bg_click">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/user_name"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:layout_marginRight="10dp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                        android:layout_gravity="right" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/divider" />

            <LinearLayout
                android:id="@+id/first_name_ll"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:background="@drawable/bg_click">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/first_name"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/first_name"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:layout_marginRight="10dp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                        android:layout_gravity="right" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/divider" />

            <LinearLayout
                android:id="@+id/last_name_ll"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:background="@drawable/bg_click">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/last_name"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/last_name"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:layout_marginRight="10dp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                        android:layout_gravity="right" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/divider" />

            <LinearLayout
                android:id="@+id/gender_ll"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:background="@drawable/bg_click">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Gender"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/gender"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:layout_marginRight="10dp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                        android:layout_gravity="right" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/divider" />

            <Button
                android:id="@+id/back_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/button_selector"
                android:text="OK"
                android:textAlignment="center"
                android:textSize="18dp" />


        </LinearLayout>
    </RelativeLayout>




</ScrollView>